# athology-ml

./: .coveragerc  .flake8  Dockerfile  README.md  pyproject.toml  secrethub.env  service.yml
.github/: build.yml
.github/workflows/: build.yml
app/: main.py  schemas.py
athology_ml/: __init__.py
athology_ml/app/: __init__.py  main.py  schemas.py  util.py
athology_ml/ml/: cli.py  main.py
athology_ml/ml/jump_detection/: __init__.py  main.py  model.py  modules.py  preprocessing.py  train.py  util.py
athology_ml/notebooks/: jump_detection.ipynb
athology_ml/pretrained_models/: jump_detection.h5
ml/jump_detection/: model.py  preprocessing.py  tune.py
tests/: conftest.py  test_athology_ml.py  test_main.py
tests/app/: test_app_util.py  test_main.py
tests/ml/jump_detection/: test_ml_util.py  test_model.py  test_modules.py  test_preprocessing.py
