[tool.poetry]
name = "athology-ml"
version = "0.1.0"
description = "Exposes several REST API endpoints for computation and prediction on accelerometer data."
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
hypothesis = "^6.4.2"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = "^5.5"
codecov = "^2.1.10"
sentry-sdk = "^0.20.3"

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
