[tool.poetry]
name = "athology-ml"
version = "0.1.0"
description = "Exposes several REST API endpoints for computation and prediction on accelerometer data."
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dcsil/athology-ml"
documentation = "https://athology-ml.herokuapp.com/docs"
include = ["pretrained_models/*"]

[tool.poetry.dependencies]
fastapi = "^0.63.0"
python = "^3.7"
tensorflow = "^2.4.1"
typer = "^0.3.2"
uvicorn = "^0.13.4"
keras-tuner = { version = "^1.0.2", optional = true }
sentry-sdk = { version = "^0.20.3", optional = true }
wasabi = "^0.8.2"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
hypothesis = {extras = ["numpy"], version = "^6.8.1"}
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
coverage = "^5.5"
codecov = "^2.1.10"

[tool.poetry.scripts]
athology-ml = 'athology_ml.ml.cli:app'

[tool.poetry.extras]
train = ["keras-tuner"]
production = ["sentry-sdk"]

[tool.black]
line-length = 100

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \btutorials\b
    | \bbuild\b
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
